<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="42dp"
        android:text="@string/register_heading"
        android:textColor="@color/black"

        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/textView2"
        app:srcCompat="@drawable/back_btn"
        android:onClick="backToMainActivity"
        android:contentDescription="@string/todo"/>

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="700dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-5dp"
        android:background="@drawable/design3"/>


    <EditText
        android:id="@+id/firstName"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/design4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:background="@drawable/design4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/design4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/firstName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/address"
        android:layout_width="281dp"
        android:layout_height="80dp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/design4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/postal_address"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_below="@+id/address"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/design4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/contact_no"
        android:ems="10"
        android:inputType="phone"
        android:autofillHints="" />

    <EditText
        android:id="@+id/city"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_below="@+id/address"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/design4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/design4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/city"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:id="@+id/psw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/design4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rePsw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/psw"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/design4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/confirm_password"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/rePsw"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:text="@string/register"
        android:textSize="15sp"
        android:background="@drawable/design5"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:onClick="registerUser"
        />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="158dp"
        android:layout_height="146dp"
        android:layout_below="@+id/rePsw"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        app:srcCompat="@drawable/logo_v2"
        android:contentDescription="@string/todo" />

</RelativeLayout>