<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="341dp"
        android:layout_height="275dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="64dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_below="@+id/logoImg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="64dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="openLoginActivity"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/design1"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="openSignupActivity"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/logoImg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="64dp"
        android:text="@string/ecoclan"
        android:textColor="@color/grey"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />


</RelativeLayout>