<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".LogInActivity">


    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="341dp"
        android:layout_height="275dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        app:srcCompat="@drawable/logo_v2"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_alignTop="@+id/logoImg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="64dp"
        android:text="@string/ecoclan"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="339dp"
        android:layout_below="@+id/logoImg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/design2"
        android:orientation="horizontal"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/secondLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="63dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/psw"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="63dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:layout_below="@+id/psw"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="133dp"
        android:background="@drawable/design1"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="LogInUser"
        android:text="@string/login" />


</RelativeLayout>